--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@rails/webpacker": "3.5",
     "bootstrap": "^4.2.1",
     "jquery": "^3.3.1",
+    "jquery-ujs": "^1.2.2",
     "popper.js": "^1.14.6"
   },
   "devDependencies": {
